--- a/front-end/src/pages/styles/Products.css
+++ b/front-end/src/pages/styles/Products.css
@@ -5,3 +5,28 @@
   justify-content: space-evenly;
   margin-bottom: 30px;
 }
+
+.shopping-cart {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+}
+
+.shopping-cart button {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(22, 86, 46));
+  color: white;
+  height: 50px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  font-size: large;
+  font-weight: bolder;
+  position: fixed;
+  bottom: 0;
+  opacity: 0.8;
+  text-align: right;
+  padding-right: 30px;
+}
+
+.shopping-cart button:hover {
+  opacity: 1;
+}
