--- a/front-end/src/components/styles/ProductCard.css
+++ b/front-end/src/components/styles/ProductCard.css
@@ -2,7 +2,7 @@
   border: 3px solid #f1f1f1;
   border-radius: 5px;
   text-align: center;
-  margin-top: 75px;
+  margin: 15px;
   padding: 15px;
   font-size: larger;
   width: 200px;
@@ -33,7 +33,7 @@
   font-size: 14px;
   font-weight: bolder;
   border-radius: 15%;
-  box-shadow: 2px 5px 2px #c4c4c4;
+  box-shadow: 2px 5px 2px #888888;
 }
 
 .product-card-container button:hover {
