--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -3,7 +3,11 @@
   text-align: center;
   margin: 25px;
   padding: 25px;
-  font-size: larger;
+  max-width: 500px;
+  margin: auto;
+  vertical-align: baseline;
+  margin-top: 30px;
+  font-size: large;
 }
 
 img.logo {
