--- a/front-end/src/components/styles/OrderCard.css
+++ b/front-end/src/components/styles/OrderCard.css
@@ -2,11 +2,38 @@
   border: 3px solid #f1f1f1;
   border-radius: 5px;
   text-align: center;
-  margin: 15px;
+  margin: 35px;
   padding: 15px;
   font-size: larger;
   width: 400px;
   height: 150px;
   box-shadow: 5px 10px 18px #888888;
+  opacity: 0.7;
+  display: flex;
+  align-items: center;
+}
+
+.order-card-container:hover {
+  opacity: 1;
+}
+
+.order-card-container ul {
+  list-style-type: none;
+  overflow: hidden;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.order-card-container li {
+  padding: 5px;
+}
+
+.order-status {
+  padding: 5px;
+  margin: 5px;
+  background-color: rgb(175, 234, 188);
+  align-items: center;
+  justify-content: center;
 }
 
