--- a/front-end/src/pages/styles/OrderDetails.css
+++ b/front-end/src/pages/styles/OrderDetails.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.order-details-container table {
+  width: 100%;
+}
+
 .order-card {
   background-color: rgb(238, 246, 237);
   width: 100%;
