--- a/front-end/src/components/styles/OrderCard.css
+++ b/front-end/src/components/styles/OrderCard.css
@@ -1,39 +1,64 @@
 .order-card-container {
-  border: 3px solid #f1f1f1;
   border-radius: 5px;
-  text-align: center;
   margin: 35px;
-  padding: 15px;
-  font-size: larger;
-  width: 400px;
-  height: 150px;
+  width: 450px;
+  height: 100px;
   box-shadow: 5px 10px 18px #888888;
   opacity: 0.7;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
 
-.order-card-container:hover {
-  opacity: 1;
-}
-
-.order-card-container ul {
-  list-style-type: none;
-  overflow: hidden;
-  flex-grow: 1;
+.order-title {
+  width: 25%;
+  height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.order-card-container li {
-  padding: 5px;
 }
 
 .order-status {
-  padding: 5px;
-  margin: 5px;
-  background-color: rgb(175, 234, 188);
-  align-items: center;
-  justify-content: center;
+  background-color: #EAF1EF;
+  width: 45%;
+  padding: 10px;
 }
 
+.order-status div {
+  background-color: rgba(204, 184, 0, 1);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: large;
+  font-weight: bold;
+}
+
+.order-status-preparando div{
+  background-color: rgba(102, 204, 0, 1);
+}
+
+.order-status-entregue div{
+  background-color: rgba(0, 204, 155, 1);
+}
+
+.order-date-price {
+  background-color: #EAF1EF;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10%;
+  padding-right: 10px;
+  width: 30%;
+}
+
+.order-date-price li {
+  background-color: rgba(242, 255, 252, 0.75);
+  border-radius: 5%;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+}
