--- a/front-end/src/components/styles/OrderCard.css
+++ b/front-end/src/components/styles/OrderCard.css
@@ -51,14 +51,16 @@
   flex-direction: column;
   justify-content: center;
   gap: 10%;
-  padding-right: 10px;
+  padding: 10px;
   width: 30%;
 }
 
 .order-date-price li {
-  background-color: rgba(242, 255, 252, 0.75);
-  border-radius: 5%;
+  background-color: rgba(242, 255, 252, 1);
+  border-radius: 8%;
   padding: 10px;
   font-weight: bold;
   text-align: center;
+  height: 45%;
+  width: 100%;
 }
