--- a/front-end/src/components/styles/sellerOrderCard.css
+++ b/front-end/src/components/styles/sellerOrderCard.css
@@ -57,16 +57,18 @@
   flex-direction: column;
   justify-content: center;
   gap: 10%;
-  padding-right: 10px;
+  padding: 10px;
   width: 30%;
 }
 
 .seller-order-date-price li {
   background-color: rgba(242, 255, 252, 1);
-  border-radius: 5%;
+  border-radius: 8%;
   padding: 10px;
   font-weight: bold;
   text-align: center;
+  height: 45%;
+  width: 100%;
 }
 
 .seller-order-address {
