--- a/front-end/src/components/styles/OrderCard.css
+++ b/front-end/src/components/styles/OrderCard.css
@@ -1,42 +1,42 @@
 .order-card-container {
   border-radius: 5px;
-  margin: 35px;
-  width: 450px;
-  height: 100px;
-  box-shadow: 5px 10px 18px #888888;
-  opacity: 0.7;
+  box-shadow: 5px 10px 18px #888;
   display: flex;
+  height: 100px;
   justify-content: space-between;
+  margin: 35px;
+  opacity: 0.7;
+  width: 450px;
 }
 
 .order-title {
-  width: 25%;
-  height: 100%;
-  display: flex;
   align-items: center;
+  display: flex;
+  height: 100%;
   justify-content: center;
+  width: 25%;
 }
 
 .order-status {
-  background-color: #EAF1EF;
-  width: 45%;
+  background-color: #eaf1ef;
   padding: 10px;
+  width: 45%;
 }
 
 .order-status div {
+  align-items: center;
   background-color: rgba(204, 184, 0, 1);
-  width: 100%;
-  height: 100%;
   border-radius: 15px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  text-transform: uppercase;
   font-size: large;
   font-weight: bold;
+  height: 100%;
+  justify-content: center;
+  text-transform: uppercase;
+  width: 100%;
 }
 
-.order-status-preparando div{
+.order-status-preparando div {
   background-color: rgba(102, 204, 0, 1);
 }
 
@@ -45,12 +45,12 @@
 }
 
 .order-date-price {
-  background-color: #EAF1EF;
-  list-style: none;
+  background-color: #eaf1ef;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 10%;
+  justify-content: center;
+  list-style: none;
   padding: 10px;
   width: 30%;
 }
@@ -58,9 +58,9 @@
 .order-date-price li {
   background-color: rgba(242, 255, 252, 1);
   border-radius: 8%;
-  padding: 10px;
   font-weight: bold;
-  text-align: center;
   height: 45%;
+  padding: 10px;
+  text-align: center;
   width: 100%;
 }
