--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -1,38 +1,38 @@
 .login-container {
   border: 3px solid #f1f1f1;
-  text-align: center;
-  margin: 25px;
-  padding: 25px;
-  max-width: 500px;
-  margin: auto;
-  vertical-align: baseline;
-  margin-top: 30px;
   font-size: large;
+  /* margin: 25px; */
+  margin: auto;
+  margin-top: 30px;
+  max-width: 500px;
+  padding: 25px;
+  text-align: center;
+  vertical-align: baseline;
 }
 
 img.logo {
-  width: 40%;
   border-radius: 100%;
-  box-shadow: 0 0 0 6px rgb(255, 255, 255), 0 20px 25px #015939;
+  box-shadow: 0 0 0 6px white, 0 20px 25px #015939;
+  width: 40%;
 }
 
 .login-container input {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  display: inline-block;
   font-size: large;
+  margin: 8px 0;
+  padding: 12px 20px;
+  width: 100%;
 }
 
 .login-container button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+  background-color: #04aa6d;
   border: none;
+  color: white;
   cursor: pointer;
+  margin: 8px 0;
+  padding: 14px 20px;
   width: 100%;
 }
 
