--- a/front-end/src/pages/styles/OrderDetails.css
+++ b/front-end/src/pages/styles/OrderDetails.css
@@ -1,10 +1,9 @@
 .order-details-container {
   border: 3px solid #f1f1f1;
-  text-align: center;
   margin: auto;
-  padding: 25px;
   margin-top: 80px;
   max-width: 600px;
+  padding: 25px;
   text-align: center;
 }
 
@@ -18,14 +17,14 @@
 }
 
 .order-details-container button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+  background-color: #04aa6d;
   border: none;
+  color: white;
   cursor: pointer;
-  width: 100%;
+  margin: 8px 0;
+  padding: 14px 20px;
   opacity: 1;
+  width: 100%;
 }
 
 .order-details-container button:hover {
