style(fix): correção do stylelint 2

--- a/front-end/src/components/styles/CheckoutForm.css
+++ b/front-end/src/components/styles/CheckoutForm.css
@@ -5,8 +5,7 @@
   text-align: center;
 }
 
-.checkout-form input,
-.checkout-form select {
+.checkout-form input, .checkout-form select {
   border: 1px solid #ccc;
   box-sizing: border-box;
   display: inline-block;
