--- a/front-end/src/components/styles/NavBar.css
+++ b/front-end/src/components/styles/NavBar.css
@@ -16,8 +16,7 @@ li {
   width: 25%;
 }
 
-.nav-bar li a,
-.nav-bar li span {
+.nav-bar li a, .nav-bar li p {
   color: white;
   display: block;
   padding: 14px 16px;
