--- a/front-end/src/components/styles/ProductCard.css
+++ b/front-end/src/components/styles/ProductCard.css
@@ -29,9 +29,9 @@
   box-shadow: 2px 5px 2px #888;
   color: white;
   cursor: pointer;
-  height: 50px;
   font-size: 14px;
-  font-weight: bolder;
+  font-weight: 700;
+  height: 50px;
   padding: 14px 20px;
   width: 50px;
 }
