--- a/front-end/src/components/styles/sellerOrderCard.css
+++ b/front-end/src/components/styles/sellerOrderCard.css
@@ -1,6 +1,6 @@
 .seller-order-card-container {
   border-radius: 5px;
-  box-shadow: 5px 10px 18px #888888;
+  box-shadow: 5px 10px 18px #888;
   display: flex;
   flex-direction: column;
   height: 130px;
@@ -23,7 +23,7 @@
 }
 
 .seller-order-status {
-  background-color: #EAF1EF;
+  background-color: #eaf1ef;
   padding: 10px;
   width: 45%;
 }
@@ -34,23 +34,23 @@
   border-radius: 15px;
   display: flex;
   font-size: large;
-  font-weight: bold;
+  font-weight: 700;
   height: 100%;
   justify-content: center;
   text-transform: uppercase;
   width: 100%;
 }
 
-.seller-order-status-preparando div{
+.seller-order-status-preparando div {
   background-color: rgba(102, 204, 0, 1);
 }
 
-.seller-order-status-entregue div{
+.seller-order-status-entregue div {
   background-color: rgba(0, 204, 155, 1);
 }
 
 .seller-order-date-price {
-  background-color: #EAF1EF;
+  background-color: #eaf1ef;
   display: flex;
   flex-direction: column;
   gap: 10%;
@@ -63,7 +63,7 @@
 .seller-order-date-price li {
   background-color: rgba(242, 255, 252, 1);
   border-radius: 8%;
-  font-weight: bold;
+  font-weight: 700;
   height: 45%;
   padding: 10px;
   text-align: center;
@@ -72,7 +72,7 @@
 
 .seller-order-address {
   align-items: center;
-  background-color: #EAF1EF;
+  background-color: #eaf1ef;
   display: flex;
   height: 30px;
   justify-content: center;
@@ -83,6 +83,6 @@
   justify-content: flex-end;
 }
 
-.seller-order-address-container p{
+.seller-order-address-container p {
   width: 75%;
 }
