--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -1,7 +1,6 @@
 .login-container {
   border: 3px solid #f1f1f1;
   font-size: large;
-  /* margin: 25px; */
   margin: auto;
   margin-top: 30px;
   max-width: 500px;
@@ -10,7 +9,7 @@
   vertical-align: baseline;
 }
 
-img.logo {
+.logo {
   border-radius: 100%;
   box-shadow: 0 0 0 6px white, 0 20px 25px #015939;
   width: 40%;
