--- a/front-end/src/pages/styles/UserManager.css
+++ b/front-end/src/pages/styles/UserManager.css
@@ -14,8 +14,7 @@
   flex-direction: column;
 }
 
-.adminFormContainer label input,
-.adminFormContainer label select {
+.adminFormContainer label input, .adminFormContainer label select {
   border: 1px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
@@ -26,7 +25,7 @@
 }
 
 .adminFormContainer button {
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   border: none;
   border-radius: 10px;
   color: white;
