--- a/front-end/src/pages/styles/Register.css
+++ b/front-end/src/pages/styles/Register.css
@@ -11,10 +11,9 @@
 
 .logo {
   border-radius: 100%;
+
   /* box-shadow: 0 0 0 6px white, 0 20px 25px #015939; */
-  box-shadow:
-    0 0 0 6px white,
-    0 0 20px 25px #015939;
+  box-shadow: 0 0 0 6px white, 0 0 20px 25px #015939;
   width: 40%;
 }
 
