style: correções na estilização da tela de login

--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -15,6 +15,14 @@
   width: 40%;
 }
 
+.login_title {
+  margin-top: 30px;
+}
+
+.login-container form {
+  margin-top: 30px;
+}
+
 .login-container input {
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -23,6 +31,10 @@
   margin: 8px 0;
   padding: 12px 20px;
   width: 100%;
+}
+
+.login-alert {
+  color: red;
 }
 
 .login-container button {
