--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -51,3 +51,10 @@
 .login-container button:hover {
   opacity: 0.8;
 }
+
+.login-container button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
+  opacity: 0.8;
+}
+
