--- a/front-end/src/pages/styles/OrderDetails.css
+++ b/front-end/src/pages/styles/OrderDetails.css
@@ -16,7 +16,16 @@
   width: 100%;
 }
 
-.order-details-container button {
+.order-card-button-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding-block: 10px;
+  gap: 2%;
+  width: 100%;
+}
+
+.order-card-button-container button {
   background-color: #04aa6d;
   border: none;
   color: white;
@@ -24,9 +33,15 @@
   margin: 8px 0;
   opacity: 1;
   padding: 14px 20px;
-  width: 100%;
+  width: 49%;
 }
 
-.order-details-container button:hover {
+.order-card-button-container button:hover {
+  opacity: 0.8;
+}
+
+.order-card-button-container button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
   opacity: 0.8;
 }
