fix(login & register): translate to PT-BR

--- a/front-end/src/pages/styles/Login.css
+++ b/front-end/src/pages/styles/Login.css
@@ -12,7 +12,8 @@
 .logo {
   border-radius: 100%;
   box-shadow: 0 0 0 6px white , 0 20px 25px #015939;
-  width: 40%;
+  width: 100%;
+  transform: scale(1.5);
 }
 
 .login_title {
