--- a/front-end/src/pages/styles/UserManager.css
+++ b/front-end/src/pages/styles/UserManager.css
@@ -6,6 +6,7 @@
   align-items: flex-end;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   padding-inline: 60px;
 }
 
@@ -16,12 +17,11 @@
 
 .adminFormContainer label input, .adminFormContainer label select {
   border: 1px solid #ccc;
-  border-radius: 10px;
   box-sizing: border-box;
   display: inline-block;
   margin: 8px 0;
-  padding: 8px 12px;
-  width: 250px;
+  padding: 12px 20px;
+  width: 100%;
 }
 
 .adminFormContainer button {
@@ -43,4 +43,10 @@
   display: flex;
   justify-content: center;
   margin-top: 60px;
+}
+
+.adminFormContainer button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
+  opacity: 0.8;
 }
