--- a/front-end/src/pages/styles/Orders.css
+++ b/front-end/src/pages/styles/Orders.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-bottom: 30px;
-  margin-top: 50px;
+  margin: 50px auto 30px;
+  padding-inline: 50px;
+  width: 90%;
 }
