--- a/front-end/src/pages/styles/OrderDetails.css
+++ b/front-end/src/pages/styles/OrderDetails.css
@@ -16,6 +16,14 @@
   width: 100%;
 }
 
+.order-details-main-title {
+  padding-bottom: 20px;
+}
+
+.order-details-title {
+  padding-block: 20px;
+}
+
 .order-card-button-container {
   align-items: center;
   display: flex;
@@ -25,7 +33,7 @@
   width: 100%;
 }
 
-.order-card-button-container button {
+.order-details-delivery-button {
   background-color: #04aa6d;
   border: none;
   color: white;
@@ -36,11 +44,11 @@
   width: 49%;
 }
 
-.order-card-button-container button:hover {
+.order-details-delivery-button:hover {
   opacity: 0.8;
 }
 
-.order-card-button-container button:disabled {
+.order-details-delivery-button:disabled {
   background-color: #adbfa9;
   cursor: not-allowed;
   opacity: 0.8;
