--- a/front-end/src/pages/styles/OrderDetails.css
+++ b/front-end/src/pages/styles/OrderDetails.css
@@ -53,3 +53,33 @@
   cursor: not-allowed;
   opacity: 0.8;
 }
+
+.seller-order-card-button-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding-block: 10px;
+  gap: 2%;
+  width: 100%;
+}
+
+.seller-order-card-button-container button {
+  background-color: #04aa6d;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin: 8px 0;
+  opacity: 1;
+  padding: 14px 20px;
+  width: 49%;
+}
+
+.seller-order-card-button-container button:hover {
+  opacity: 0.8;
+}
+
+.seller-order-card-button-container button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
+  opacity: 0.8;
+}
