--- a/front-end/src/pages/styles/UserManager.css
+++ b/front-end/src/pages/styles/UserManager.css
@@ -27,10 +27,10 @@
 .adminFormContainer button {
   background-color: #04aa6d;
   border: none;
-  border-radius: 10px;
   color: white;
   cursor: pointer;
   margin: 8px 0;
+  opacity: 1;
   padding: 14px 20px;
 }
 
