--- a/front-end/src/pages/styles/Register.css
+++ b/front-end/src/pages/styles/Register.css
@@ -46,3 +46,9 @@
 .register-container button:hover {
   opacity: 0.8;
 }
+
+.register-container button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
+  opacity: 0.8;
+}
