--- a/front-end/src/components/styles/ProductCard.css
+++ b/front-end/src/components/styles/ProductCard.css
@@ -2,12 +2,13 @@
   border: 3px solid #f1f1f1;
   border-radius: 5px;
   box-shadow: 5px 10px 18px #888;
+  flex-grow: 1;
   font-size: larger;
   height: 300px;
   margin: 15px;
   padding: 15px;
   text-align: center;
-  width: 200px;
+  width: 240px;
 }
 
 .product-card-container input {
@@ -38,6 +39,11 @@
 
 .product-card-container button:hover {
   opacity: 0.8;
+}
+
+.product-card-container button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
 }
 
 .product-card-container img {
