--- a/front-end/src/pages/styles/Products.css
+++ b/front-end/src/pages/styles/Products.css
@@ -1,10 +1,16 @@
+.products-container {
+  align-items: center;
+  display: flex;
+  width: 100%;
+}
+
 .products-background {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-bottom: 30px;
-  margin-top: 50px;
+  margin: 50px auto 55px;
+  padding-inline: 60px;
 }
 
 .shopping-cart {
@@ -31,4 +37,9 @@
 
 .shopping-cart button:hover {
   opacity: 1;
+}
+
+.shopping-cart button:disabled {
+  cursor: not-allowed;
+  opacity: 0.8;
 }
