--- a/front-end/src/components/styles/CheckoutForm.css
+++ b/front-end/src/components/styles/CheckoutForm.css
@@ -2,7 +2,6 @@
   border: 3px solid #f1f1f1;
   margin: 25px;
   padding: 25px;
-  text-align: center;
 }
 
 .checkout-form input, .checkout-form select {
@@ -27,4 +26,15 @@
 
 .checkout-form button:hover {
   opacity: 0.8;
+}
+
+.checkout-form button:disabled {
+  background-color: #adbfa9;
+  cursor: not-allowed;
+  opacity: 0.8;
+}
+
+.checkout-form-title {
+  text-align: start;
+  padding-bottom: 20px;
 }
