--- a/front-end/src/components/styles/CheckoutForm.css
+++ b/front-end/src/components/styles/CheckoutForm.css
@@ -1,6 +1,12 @@
 .checkout-form {
+  align-items: center;
   border: 3px solid #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 25px;
+  max-height: 80vh;
+  min-height: 80vh;
   padding: 25px;
 }
 
