--- a/front-end/src/pages/styles/Checkout.css
+++ b/front-end/src/pages/styles/Checkout.css
@@ -2,18 +2,21 @@
   align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin-bottom: 30px;
   margin-top: 50px;
+  padding-inline: 30px;
 }
 
 .checkout-table-container {
   border: 3px solid #f1f1f1;
   margin: 25px;
-  min-width: 700px;
   padding: 25px;
-  text-align: center;
   max-height: 80vh;
+  max-width: 700px;
+  min-height: 80vh;
+  min-width: 700px;
+  text-align: center;
   overflow-x: scroll;
 }
 
